3.0.0 New features